# cad

./: .gitignore  .gitmodules  pyproject.toml
bd_gridfinity/: pyproject.toml  test.py
bd_gridfinity/src/bd_gridfinity/: __init__.py  baseplate.py  bin.py  spec.py
bd_utils/: pyproject.toml
bd_utils/src/bd_utils/: __init__.py  builder.py  debug.py  shorthand.py
uhk/: stand.py
